finish ML_pipeline template and demos

--- a/ML_pipeline/ML_pipeline_templates.ipynb
+++ b/ML_pipeline/ML_pipeline_templates.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "This is a template for ML pipeline. This template contains 4 parts:\n",
     "\n",
-    "* import libraries\n",
-    "* data cleaning: load, tokenize(including lemmatizer)\n",
-    "* ML regular workflow: in old_main()\n",
-    "* ML pipeline: in main()\n",
+    "* implement bacis pipeline\n",
+    "* implement feature union\n",
+    "* build a customer transformer\n",
+    "* implement grid search\n",
     "\n",
     "Note:\n",
     "\n",
@@ -205,11 +205,621 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Implementing Feature Union\n",
+    "Using the given custom transformer, `StartingVerbExtractor`, add a feature union to your pipeline to incorporate a feature that indicates with a boolean value whether the starting token of a post is identified as a verb."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import nltk\n",
+    "nltk.download(['punkt', 'wordnet', 'averaged_perceptron_tagger'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from custom_transformer import StartingVerbExtractor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_regex = 'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Build your pipeline to have this structure:\n",
+    "- Pipeline\n",
+    "    - feature union\n",
+    "        - text pipeline\n",
+    "            - count vectorizer\n",
+    "            - TFIDF transformer\n",
+    "        - starting verb extractor\n",
+    "    - classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model_pipeline():\n",
+    "    pipeline = Pipeline([\n",
+    "        \n",
+    "        ('feature', FeatureUnion([\n",
+    "            \n",
+    "            ('text_pipeline',Pipeline([\n",
+    "                ('countvect', CountVectorizer(tokenizer=tokenize)),\n",
+    "                ('tfidf',TfidfTransformer())\n",
+    "                 ])\n",
+    "            ),\n",
+    "            \n",
+    "            ('startverb',StartingVerbExtractor())\n",
+    "        ])),\n",
+    "        \n",
+    "        ('clf', RandomForestClassifier())\n",
+    "    ])    \n",
+    "\n",
+    "    return pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define other functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def load_data():\n",
+    "    df = pd.read_csv('corporate_messaging.csv', encoding='latin-1')\n",
+    "    df = df[(df[\"category:confidence\"] == 1) & (df['category'] != 'Exclude')]\n",
+    "    X = df.text.values\n",
+    "    y = df.category.values\n",
+    "    return X, y\n",
+    "\n",
+    "\n",
+    "def tokenize(text):\n",
+    "    detected_urls = re.findall(url_regex, text)\n",
+    "    for url in detected_urls:\n",
+    "        text = text.replace(url, \"urlplaceholder\")\n",
+    "\n",
+    "    tokens = word_tokenize(text)\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "    clean_tokens = []\n",
+    "    for tok in tokens:\n",
+    "        clean_tok = lemmatizer.lemmatize(tok).lower().strip()\n",
+    "        clean_tokens.append(clean_tok)\n",
+    "\n",
+    "    return clean_tokens\n",
+    "\n",
+    "\n",
+    "def display_results(y_test, y_pred):\n",
+    "    labels = np.unique(y_pred)\n",
+    "    confusion_mat = confusion_matrix(y_test, y_pred, labels=labels)\n",
+    "    accuracy = (y_pred == y_test).mean()\n",
+    "\n",
+    "    print(\"Labels:\", labels)\n",
+    "    print(\"Confusion Matrix:\\n\", confusion_mat)\n",
+    "    print(\"Accuracy:\", accuracy)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define main function and run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    X, y = load_data()\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
+    "\n",
+    "    model = model_pipeline()\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "\n",
+    "    display_results(y_test, y_pred)\n",
+    "\n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create Custom Transformer\n",
+    "### Implement the StartingVerbExtractor class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StartingVerbExtractor(BaseEstimator, TransformerMixin):\n",
+    "\n",
+    "    def starting_verb(self, text):\n",
+    "        # tokenize by sentences\n",
+    "        sentence_list = nltk.sent_tokenize(text)\n",
+    "        \n",
+    "        for sentence in sentence_list:\n",
+    "            # tokenize each sentence into words and tag part of speech\n",
+    "            pos_tags = nltk.pos_tag(tokenize(sentence))\n",
+    "\n",
+    "            # index pos_tags to get the first word and part of speech tag\n",
+    "            first_word, first_tag = pos_tags[0]\n",
+    "            \n",
+    "            # return true if the first word is an appropriate verb or RT for retweet\n",
+    "            if first_tag in ['VB', 'VBP'] or first_word == 'RT':\n",
+    "                return True\n",
+    "\n",
+    "        return False\n",
+    "\n",
+    "    def fit(self, x, y=None):\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X):\n",
+    "        # apply starting_verb function to all values in X\n",
+    "        X_tagged = pd.Series(X).apply(self.starting_verb)\n",
+    "\n",
+    "        return pd.DataFrame(X_tagged)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define other functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data():\n",
+    "    df = pd.read_csv('corporate_messaging.csv', encoding='latin-1')\n",
+    "    df = df[(df[\"category:confidence\"] == 1) & (df['category'] != 'Exclude')]\n",
+    "    X = df.text.values\n",
+    "    y = df.category.values\n",
+    "    return X, y\n",
+    "\n",
+    "\n",
+    "def tokenize(text):\n",
+    "    detected_urls = re.findall(url_regex, text)\n",
+    "    for url in detected_urls:\n",
+    "        text = text.replace(url, \"urlplaceholder\")\n",
+    "\n",
+    "    tokens = word_tokenize(text)\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "    clean_tokens = []\n",
+    "    for tok in tokens:\n",
+    "        clean_tok = lemmatizer.lemmatize(tok).lower().strip()\n",
+    "        clean_tokens.append(clean_tok)\n",
+    "\n",
+    "    return clean_tokens\n",
+    "\n",
+    "\n",
+    "def model_pipeline():\n",
+    "    pipeline = Pipeline([\n",
+    "        ('features', FeatureUnion([\n",
+    "\n",
+    "            ('text_pipeline', Pipeline([\n",
+    "                ('vect', CountVectorizer(tokenizer=tokenize)),\n",
+    "                ('tfidf', TfidfTransformer())\n",
+    "            ])),\n",
+    "\n",
+    "            ('starting_verb', StartingVerbExtractor())\n",
+    "        ])),\n",
+    "\n",
+    "        ('clf', RandomForestClassifier())\n",
+    "    ])\n",
+    "\n",
+    "    return pipeline\n",
+    "\n",
+    "\n",
+    "def display_results(y_test, y_pred):\n",
+    "    labels = np.unique(y_pred)\n",
+    "    confusion_mat = confusion_matrix(y_test, y_pred, labels=labels)\n",
+    "    accuracy = (y_pred == y_test).mean()\n",
+    "\n",
+    "    print(\"Labels:\", labels)\n",
+    "    print(\"Confusion Matrix:\\n\", confusion_mat)\n",
+    "    print(\"Accuracy:\", accuracy)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define main function and run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    X, y = load_data()\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
+    "\n",
+    "    model = model_pipeline()\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "\n",
+    "    display_results(y_test, y_pred)\n",
+    "\n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Grid Search\n",
+    "Grid search is a model selection process. It is used to compare the score with cross validation from differenct parameter settings for different features. Grid search is a technique used for hyperparameter tuning in machine learning and optimization tasks. It is an exhaustive search over a manually specified subset of the hyperparameter space of a learning algorithm.\n",
+    "\n",
+    "Let's incorporate grid search into your modeling process. To start, include an import statement for `GridSearchCV` below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "nltk.download(['punkt', 'wordnet', 'averaged_perceptron_tagger'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define some text transform and tagging functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_regex = 'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+'\n",
+    "\n",
+    "def tokenize(text):\n",
+    "    detected_urls = re.findall(url_regex, text)\n",
+    "    for url in detected_urls:\n",
+    "        text = text.replace(url, \"urlplaceholder\")\n",
+    "\n",
+    "    tokens = word_tokenize(text)\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "    clean_tokens = []\n",
+    "    for tok in tokens:\n",
+    "        clean_tok = lemmatizer.lemmatize(tok).lower().strip()\n",
+    "        clean_tokens.append(clean_tok)\n",
+    "\n",
+    "    return clean_tokens\n",
+    "\n",
+    "\n",
+    "class StartingVerbExtractor(BaseEstimator, TransformerMixin):\n",
+    "\n",
+    "    def starting_verb(self, text):\n",
+    "        sentence_list = nltk.sent_tokenize(text)\n",
+    "        for sentence in sentence_list:\n",
+    "            pos_tags = nltk.pos_tag(tokenize(sentence))\n",
+    "            first_word, first_tag = pos_tags[0]\n",
+    "            if first_tag in ['VB', 'VBP'] or first_word == 'RT':\n",
+    "                return True\n",
+    "        return False\n",
+    "\n",
+    "    def fit(self, x, y=None):\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X):\n",
+    "        X_tagged = pd.Series(X).apply(self.starting_verb)\n",
+    "        return pd.DataFrame(X_tagged)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### View parameters in pipeline\n",
+    "Before modifying your build_model method to include grid search, view the parameters in your pipeline here.\n",
+    "\n",
+    "In scikit-learn, the `get_params()` method is used to get the parameters of an estimator in a pipeline. It returns a dictionary containing the parameters of each step in the pipeline along with their current values.\n",
+    "\n",
+    "**Input**\n",
+    "```python\n",
+    "\n",
+    "    from sklearn.pipeline import Pipeline\n",
+    "    # Example pipeline\n",
+    "    pipeline = Pipeline([\n",
+    "    ('step1', SomeTransformer(param1=1, param2=2)),  # Example transformer\n",
+    "    ('step2', SomeEstimator(param3=3))              # Example estimator\n",
+    "    ])\n",
+    "\n",
+    "    # Get parameters of the pipeline\n",
+    "    params = pipeline.get_params()\n",
+    "\n",
+    "    print(\"Parameters of the pipeline:\")\n",
+    "    print(params)\n",
+    "    \n",
+    "```\n",
+    "\n",
+    "**Output**\n",
+    "\n",
+    "```python\n",
+    "Parameters of the pipeline:\n",
+    "{\n",
+    "    'memory': None,\n",
+    "    'steps': [\n",
+    "        ('step1', SomeTransformer(param1=1, param2=2)),\n",
+    "        ('step2', SomeEstimator(param3=3))\n",
+    "    ],\n",
+    "    'verbose': False,\n",
+    "    'step1': SomeTransformer(param1=1, param2=2),\n",
+    "    'step2': SomeEstimator(param3=3),\n",
+    "    'step1__param1': 1,\n",
+    "    'step1__param2': 2,\n",
+    "    'step2__param3': 3\n",
+    "    ...\n",
+    "}\n",
+    "```\n",
+    "**Print**\n",
+    "\n",
+    "```python\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "# Example pipeline\n",
+    "pipeline = Pipeline([\n",
+    "    ('step1', SomeTransformer(param1=1, param2=2)),  # Example transformer\n",
+    "    ('step2', SomeEstimator(param3=3))              # Example estimator\n",
+    "])\n",
+    "\n",
+    "# Get parameters of the pipeline\n",
+    "params = pipeline.get_params()\n",
+    "\n",
+    "# Example: Check the value of 'param1' in 'step1'\n",
+    "param1_value = params['step1__param1']\n",
+    "print(\"Value of 'param1' in 'step1':\", param1_value)\n",
+    "\n",
+    "# Example: Check the value of 'param3' in 'step2'\n",
+    "param3_value = params['step2__param3']\n",
+    "print(\"Value of 'param3' in 'step2':\", param3_value)\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = Pipeline([\n",
+    "    ('features', FeatureUnion([\n",
+    "\n",
+    "        ('text_pipeline', Pipeline([\n",
+    "            ('vect', CountVectorizer(tokenizer=tokenize)),\n",
+    "            ('tfidf', TfidfTransformer())\n",
+    "        ])),\n",
+    "\n",
+    "        ('starting_verb', StartingVerbExtractor())\n",
+    "    ])),\n",
+    "\n",
+    "    ('clf', RandomForestClassifier())\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline.get_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = pipeline.get_params()\n",
+    "param1_value = params['features__text_pipeline__vect__stop_words']\n",
+    "print(param1_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modify your `build_model` function to return a GridSearchCV object.\n",
+    "Try to grid search some parameters in your data transformation steps as well as those for your classifier! Browse the parameters you can search above.\n",
+    "\n",
+    "#### **Attention**\n",
+    "* Grid search avoid **data leakage!!!**(How? see the notes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_model():\n",
+    "    pipeline = Pipeline([\n",
+    "        ('features', FeatureUnion([\n",
+    "            \n",
+    "            ('text_pipeline', Pipeline([\n",
+    "                ('vect', CountVectorizer(tokenizer=tokenize)),\n",
+    "                ('tfidf', TfidfTransformer())\n",
+    "            ])),\n",
+    "\n",
+    "            ('starting_verb', StartingVerbExtractor())\n",
+    "        ])),\n",
+    "    \n",
+    "        ('clf', RandomForestClassifier())\n",
+    "    ])\n",
+    "\n",
+    "    # specify parameters for grid search\n",
+    "    parameters = {\n",
+    "    'features__text_pipeline__vect__ngram_range': ((1, 1), (1, 2)),\n",
+    "    'clf__n_estimators': [50, 100, 200],\n",
+    "    'clf__min_samples_split': [2, 3, 4]\n",
+    "        \n",
+    "    }\n",
+    "\n",
+    "    # create grid search object\n",
+    "    cv = GridSearchCV(pipeline, param_grid=parameters)\n",
+    "    \n",
+    "    return cv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define other functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data():\n",
+    "    df = pd.read_csv('corporate_messaging.csv', encoding='latin-1')\n",
+    "    df = df[(df[\"category:confidence\"] == 1) & (df['category'] != 'Exclude')]\n",
+    "    X = df.text.values\n",
+    "    y = df.category.values\n",
+    "    return X, y\n",
+    "\n",
+    "\n",
+    "def display_results(cv, y_test, y_pred):\n",
+    "    labels = np.unique(y_pred)\n",
+    "    confusion_mat = confusion_matrix(y_test, y_pred, labels=labels)\n",
+    "    accuracy = (y_pred == y_test).mean()\n",
+    "\n",
+    "    print(\"Labels:\", labels)\n",
+    "    print(\"Confusion Matrix:\\n\", confusion_mat)\n",
+    "    print(\"Accuracy:\", accuracy)\n",
+    "    print(\"\\nBest Parameters:\", cv.best_params_)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define main function and run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    X, y = load_data()\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
+    "\n",
+    "    model = build_model()\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    \n",
+    "    display_results(model, y_test, y_pred)\n",
+    "\n",
+    "\n",
+    "main()"
+   ]
   }
  ],
  "metadata": {
